--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "git@github.com:originalgremlin/chrome-xmpp-devtool.git"
   },
   "dependencies": {
+    "flux": "^2.0.3",
+    "lodash": "^3.10.0",
+    "md5": "^2.0.0",
     "react": "^0.13.3"
   },
   "devDependencies": {
