--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
+    "crx": "^3.0.3",
     "react-tools": "^0.13.3",
     "watchify": "^3.2.3"
   }
